# batchaug

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
batchaug/: __init__.py  _backend.py  base.py  compose.py
batchaug/geometric/: affine.py  flip.py  rotate90.py
batchaug/intensity/: bias_field.py  contrast.py  gibbs_noise.py  noise.py  resolution.py  sharpen.py  smooth.py
batchaug/pytorch/: __init__.py
batchaug/pytorch/geometric/: affine.py  elastic.py  flip.py  rotate.py  rotate90.py  zoom.py
batchaug/pytorch/intensity/: bias_field.py  contrast.py  gibbs_noise.py  noise.py  pad.py  randconv.py  resolution.py  scale_shift.py  sharpen.py  smooth.py
batchaug/triton/: __init__.py  fused.py
batchaug/triton/intensity/: bias_field.py  (+5 more)
docs/: sampling.md  transforms.md
examples/: benchmark_memory.py  benchmark_pipeline.py  benchmark_time.py  benchmark_triton.py  benchmark_triton_pipeline.py  pipeline.yml  run_all_benchmarks.sh
tests/: README.md  config.yml  conftest.py  test_adjust_contrast.py  test_affine.py  test_bias_field.py  test_compose.py  test_divisible_pad.py  test_flip.py  test_flip_rand.py  test_fused_augment.py  test_gibbs_noise.py  test_integration.py  test_noise.py  test_padding_modes.py  test_rand_3d_elastic.py  test_randconv.py  test_resolution.py  test_rician_noise.py  test_rotate.py  test_rotate90.py  test_scale_intensity.py  test_scale_shift.py  test_sharpen.py  test_smooth.py  test_triton_bias_field.py  test_triton_contrast.py  test_triton_scale_shift.py  test_triton_sharpen.py  test_triton_smooth.py  test_zoom.py
(+6 files in other folders)
